fix: nav header z-index issue cause if the page has scroll and user focus on input filed and start scrolling to the bottom the input become above the header.

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -20,7 +20,7 @@
   position: absolute;
   right: 0;
   left: 0;
-  z-index: 2;
+  z-index: 4;
 }
 
 header {
